--- a/css/main.css
+++ b/css/main.css
@@ -4,33 +4,33 @@
   border: 0;
   box-sizing: border-box;
 }
-@import url("./assets/normalize.css");
+
 @font-face {
   font-family: "fabianestem-normal";
-  src: url("./fonts/FABIN.eot"); /* IE9 Compat Modes */
-  src: url("./fonts/FABIN.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */ url("./fonts/FABIN.otf") format("opentype"),
-    /* Open Type Font */ url("./fonts/FABIN.svg") format("svg"), /* Legacy iOS */ url("./fonts/FABIN.ttf") format("truetype"),
-    /* Safari, Android, iOS */ url("./fonts/FABIN.woff") format("woff"),
-    /* Modern Browsers */ url("./fonts/FABIN.woff2") format("woff2"); /* Modern Browsers */
+  src: url("../fonts/FABIN.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/FABIN.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */ url("../fonts/FABIN.otf") format("opentype"),
+    /* Open Type Font */ url("../fonts/FABIN.svg") format("svg"), /* Legacy iOS */ url("../fonts/FABIN.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/FABIN.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/FABIN.woff2") format("woff2"); /* Modern Browsers */
   font-weight: normal;
   font-style: normal;
 }
 /* font converted using font-converter.net. thank you! */
 @font-face {
   font-family: "avenir-regular";
-  src: url("./fonts/avenir-next-lt-pro.eot"); /* IE9 Compat Modes */
-  src: url("./fonts/avenir-next-lt-pro.eot?#iefix") format("embedded-opentype"),
-    /* IE6-IE8 */ url("./fonts/avenir-next-lt-pro.otf") format("opentype"),
-    /* Open Type Font */ url("./fonts/avenir-next-lt-pro.svg") format("svg"),
-    /* Legacy iOS */ url("./fonts/avenir-next-lt-pro.ttf") format("truetype"),
-    /* Safari, Android, iOS */ url("./fonts/avenir-next-lt-pro.woff") format("woff"),
-    /* Modern Browsers */ url("./fonts/avenir-next-lt-pro.woff2") format("woff2"); /* Modern Browsers */
+  src: url("../fonts/avenir-next-lt-pro.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/avenir-next-lt-pro.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/avenir-next-lt-pro.otf") format("opentype"),
+    /* Open Type Font */ url("../fonts/avenir-next-lt-pro.svg") format("svg"),
+    /* Legacy iOS */ url("../fonts/avenir-next-lt-pro.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/avenir-next-lt-pro.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/avenir-next-lt-pro.woff2") format("woff2"); /* Modern Browsers */
   font-weight: normal;
   font-style: normal;
 }
 
 body {
-  background: url("./img/bg-pattern-min.png");
+  background: url("../img/bg-pattern-min.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
